[package]
name = "run-all"
version = "0.9.0"
license = "MIT"
authors = ["Robert Parsons <headexplodes@gmail.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/headexplodes/run-all"
repository = "https://github.com/headexplodes/run-all"

[dependencies]
ansi_term = "0.12.1"
ctrlc = "3.1.3"

[[bin]]
name = "run-all"

[profile.release]
# trying to create smaller binary
lto = true
panic = "abort"
